Update: Add Singapore/UK expert content and fix logo backgrounds

--- a/index-en.html
+++ b/index-en.html
@@ -87,8 +87,8 @@
 
                 <!-- Logo (Left Side) -->
                 <div class="flex items-center gap-2">
-                    <img src="images/calx-logo-black2.png" alt="CALX Logo"
-                        class="h-12 w-auto dark:invert hover:scale-105 transition-transform duration-300">
+                    <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
+                        class="h-12 w-auto hover:scale-105 transition-transform duration-300">
                 </div>
 
                 <!-- Desktop Nav (Right Side) -->
@@ -671,7 +671,8 @@
                                 Building & Training</h3>
                             <p class="text-slate-600 dark:text-slate-400 leading-relaxed">
                                 Comprehensive training programs for teachers and leaders to understand standards and
-                                apply them effectively in daily practices.
+                                apply them effectively in daily practices. <strong>Our team includes free experts from
+                                    Singapore and the UK</strong>, bringing international best practices to your school.
                             </p>
                         </div>
                     </div>
@@ -729,7 +730,7 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-2 space-y-4">
-                    <img src="images/calx-logo-black-final.gif" class="h-12 w-auto mb-6 opacity-90" alt="Logo">
+                    <img src="images/CALX-Logo-White-1.png" class="h-12 w-auto mb-6 opacity-90" alt="Logo">
                     <p class="text-slate-500 max-w-sm leading-relaxed">
                         The Success Partner for International Schools. We help you achieve excellence and accreditation
                         through innovative solutions and certified experts.
