--- a/assessment-en.html
+++ b/assessment-en.html
@@ -84,7 +84,7 @@
             <div class="flex items-center gap-3">
                 <span class="font-bold text-lg text-slate-800">Readiness Assessment Tool</span>
                 <div class="h-8 w-px bg-slate-200 mx-2"></div>
-                <img src="images/calx-logo-black-final.gif" alt="CALX Logo" class="h-8 w-auto">
+                <img src="images/CALX-Logo-White-1.png" alt="CALX Logo" class="h-8 w-auto">
 
                 <!-- Language Switcher -->
                 <a href="assessment.html"
