Add clickable logos to calx.sa and WhatsApp phone links

--- a/assessment.html
+++ b/assessment.html
@@ -78,7 +78,10 @@
             <div class="flex items-center gap-3">
                 <span class="font-bold text-lg text-slate-800">أداة تقييم الجاهزية</span>
                 <div class="h-8 w-px bg-slate-200 mx-2"></div>
-                <img src="images/calx-logo-black-final.gif" alt="CALX Logo" class="h-8 w-auto">
+                <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
+                    <img src="images/calx-logo-black-final.gif" alt="CALX Logo"
+                        class="h-8 w-auto cursor-pointer hover:opacity-80 transition-opacity">
+                </a>
                 <a href="assessment-en.html"
                     class="mr-4 flex items-center gap-2 text-sm font-bold text-slate-600 hover:text-emerald-600 font-sans border-r border-slate-300 pr-4">
                     <i data-lucide="globe" class="w-4 h-4"></i> English
