--- a/index-en.html
+++ b/index-en.html
@@ -87,8 +87,10 @@
 
                 <!-- Logo (Left Side) -->
                 <div class="flex items-center gap-2">
-                    <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
-                        class="h-12 w-auto hover:scale-105 transition-transform duration-300">
+                    <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
+                        <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
+                            class="h-12 w-auto hover:scale-105 transition-transform duration-300 cursor-pointer">
+                    </a>
                 </div>
 
                 <!-- Desktop Nav (Right Side) -->
@@ -710,7 +712,7 @@
                 class="bg-white/5 backdrop-blur-md rounded-3xl p-8 border border-white/10 max-w-2xl mx-auto shadow-2xl">
                 <div class="text-2xl font-bold mb-6">Dani Sinai</div>
                 <div class="flex flex-col sm:flex-row gap-6 justify-center items-center text-lg">
-                    <a href="tel:0599343529"
+                    <a href="https://wa.me/966599343529" target="_blank" rel="noopener noreferrer"
                         class="group flex items-center gap-3 px-6 py-3 rounded-xl bg-white/5 hover:bg-emerald-600 hover:text-white transition-all duration-300">
                         <i data-lucide="phone" class="w-5 h-5 text-emerald-400 group-hover:text-white"></i>
                         <span class="font-mono">0599343529</span>
@@ -730,7 +732,11 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-2 space-y-4">
-                    <img src="images/CALX-Logo-White-1.png" class="h-12 w-auto mb-6 opacity-90" alt="Logo">
+                    <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
+                        <img src="images/CALX-Logo-White-1.png"
+                            class="h-12 w-auto mb-6 opacity-90 hover:opacity-100 transition-opacity cursor-pointer"
+                            alt="Logo">
+                    </a>
                     <p class="text-slate-500 max-w-sm leading-relaxed">
                         The Success Partner for International Schools. We help you achieve excellence and accreditation
                         through innovative solutions and certified experts.
