--- a/assessment-en.html
+++ b/assessment-en.html
@@ -84,7 +84,10 @@
             <div class="flex items-center gap-3">
                 <span class="font-bold text-lg text-slate-800">Readiness Assessment Tool</span>
                 <div class="h-8 w-px bg-slate-200 mx-2"></div>
-                <img src="images/CALX-Logo-White-1.png" alt="CALX Logo" class="h-8 w-auto">
+                <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
+                    <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
+                        class="h-8 w-auto cursor-pointer hover:opacity-80 transition-opacity">
+                </a>
 
                 <!-- Language Switcher -->
                 <a href="assessment.html"
