--- a/index-en.html
+++ b/index-en.html
@@ -194,9 +194,9 @@
                 </div>
 
                 <h1 class="text-5xl md:text-7xl lg:text-8xl font-black text-white leading-[1.1] tracking-tight">
-                    Transform your school into an <br>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-emerald-300 to-teal-400">Accredited
-                        Beacon</span>
+                    Transform your school into a <br>
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-emerald-300 to-teal-400">nationally
+                        accredited institution of excellence</span>
                 </h1>
 
                 <p class="text-xl md:text-2xl text-slate-300 leading-relaxed max-w-3xl mx-auto font-light">
