Fix logo visibility on English pages: switch to black logo with dark mode support

--- a/assessment-en.html
+++ b/assessment-en.html
@@ -85,7 +85,7 @@
                 <span class="font-bold text-lg text-slate-800">Readiness Assessment Tool</span>
                 <div class="h-8 w-px bg-slate-200 mx-2"></div>
                 <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
-                    <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
+                    <img src="images/calx-logo-black-final.gif" alt="CALX Logo"
                         class="h-8 w-auto cursor-pointer hover:opacity-80 transition-opacity">
                 </a>
 
