--- a/index-en.html
+++ b/index-en.html
@@ -88,8 +88,8 @@
                 <!-- Logo (Left Side) -->
                 <div class="flex items-center gap-2">
                     <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
-                        <img src="images/CALX-Logo-White-1.png" alt="CALX Logo"
-                            class="h-12 w-auto hover:scale-105 transition-transform duration-300 cursor-pointer">
+                        <img src="images/calx-logo-black2.png" alt="CALX Logo"
+                            class="h-12 w-auto dark:invert hover:scale-105 transition-transform duration-300 cursor-pointer">
                     </a>
                 </div>
 
@@ -733,7 +733,7 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-2 space-y-4">
                     <a href="https://calx.sa" target="_blank" rel="noopener noreferrer">
-                        <img src="images/CALX-Logo-White-1.png"
+                        <img src="images/calx-logo-black-final.gif"
                             class="h-12 w-auto mb-6 opacity-90 hover:opacity-100 transition-opacity cursor-pointer"
                             alt="Logo">
                     </a>
