Update Arabic licensing text and add missing transformation section to English page

--- a/index-en.html
+++ b/index-en.html
@@ -374,6 +374,77 @@
         </div>
     </section>
 
+    <!-- Why Accreditation Matters - Transformation Journey -->
+    <section class="py-24 bg-slate-50 dark:bg-slate-900">
+        <div class="container mx-auto px-4">
+            <div class="max-w-6xl mx-auto">
+                <div class="text-center mb-16 space-y-4">
+                    <h2 class="text-4xl md:text-5xl font-bold">Why is Accreditation Important?</h2>
+                    <div class="w-24 h-1 bg-emerald-600 mx-auto rounded-full"></div>
+                </div>
+
+                <div class="grid md:grid-cols-2 gap-12 items-center">
+                    <div class="space-y-8 order-2 md:order-1">
+                        <p class="text-xl font-light leading-relaxed text-slate-700 dark:text-slate-300">
+                            Evaluation is not just about obtaining a license, but a <span
+                                class="font-bold text-emerald-600">comprehensive transformation journey</span> aimed at
+                            raising school performance efficiency and improving learning outcomes.
+                        </p>
+                        <div class="space-y-4">
+                            <div
+                                class="flex items-center gap-4 p-4 bg-white dark:bg-slate-800 rounded-xl shadow-sm border border-slate-100 hover:border-emerald-400 transition-colors cursor-default">
+                                <div
+                                    class="w-10 h-10 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-600">
+                                    <i data-lucide="check" class="w-6 h-6"></i>
+                                </div>
+                                <span class="text-lg font-bold text-slate-700 dark:text-slate-200">Ensuring Educational
+                                    Quality</span>
+                            </div>
+                            <div
+                                class="flex items-center gap-4 p-4 bg-white dark:bg-slate-800 rounded-xl shadow-sm border border-slate-100 hover:border-emerald-400 transition-colors cursor-default">
+                                <div
+                                    class="w-10 h-10 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-600">
+                                    <i data-lucide="file-check" class="w-6 h-6"></i>
+                                </div>
+                                <span class="text-lg font-bold text-slate-700 dark:text-slate-200">Mandatory Requirement
+                                    from the Education Evaluation Commission</span>
+                            </div>
+                            <div
+                                class="flex items-center gap-4 p-4 bg-white dark:bg-slate-800 rounded-xl shadow-sm border border-slate-100 hover:border-emerald-400 transition-colors cursor-default">
+                                <div
+                                    class="w-10 h-10 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-600">
+                                    <i data-lucide="heart-handshake" class="w-6 h-6"></i>
+                                </div>
+                                <span class="text-lg font-bold text-slate-700 dark:text-slate-200">Enhancing Parent
+                                    Confidence</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="order-1 md:order-2">
+                        <div class="relative aspect-video rounded-3xl overflow-hidden shadow-2xl group">
+                            <!-- Background Image Mockup -->
+                            <div class="absolute inset-0 bg-gradient-to-br from-emerald-900 to-slate-900"></div>
+                            <div
+                                class="absolute inset-0 opacity-20 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]">
+                            </div>
+
+                            <div
+                                class="relative z-10 w-full h-full flex flex-col items-center justify-center p-12 text-center text-white space-y-6">
+                                <div
+                                    class="w-24 h-24 rounded-full bg-white/10 backdrop-blur-md flex items-center justify-center mb-4 border border-white/20 shadow-glow animate-pulse">
+                                    <i data-lucide="star" class="w-12 h-12 text-yellow-400 fill-current"></i>
+                                </div>
+                                <h3 class="text-4xl font-extrabold tracking-tight">Mastering Standards</h3>
+                                <p class="text-xl text-emerald-200 font-light">Excellence in Education Starts Here</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Challenges Section -->
     <section id="challenges" class="py-24 bg-white dark:bg-slate-950">
         <div class="container mx-auto px-4">
