--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
                                     class="w-10 h-10 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-600">
                                     <i data-lucide="file-check" class="w-6 h-6"></i>
                                 </div>
-                                <span class="text-lg font-bold text-slate-700 dark:text-slate-200">شرط إلزامي
-                                    للرخصة</span>
+                                <span class="text-lg font-bold text-slate-700 dark:text-slate-200">شرط إلزامي من هيئة
+                                    تقويم التعليم</span>
                             </div>
                             <div
                                 class="flex items-center gap-4 p-4 bg-white dark:bg-slate-800 rounded-xl shadow-sm border border-slate-100 hover:border-emerald-400 transition-colors cursor-default">
