--- a/index.html
+++ b/index.html
@@ -523,13 +523,14 @@
                             التعليمية</p>
                         <div class="text-sm text-slate-300 flex flex-col gap-1">
                             <a href="mailto:dsinai@calx.sa"
-                                class="hover:text-primary-400 transition-colors flex items-center gap-2 dir-ltr justify-end">
-                                <i data-lucide="mail" class="w-3 h-3"></i> dsinai@calx.sa
+                                class="hover:text-primary-400 transition-colors flex items-center gap-2">
+                                <i data-lucide="mail" class="w-4 h-4 text-primary-600"></i>
+                                <span dir="ltr">dsinai@calx.sa</span>
                             </a>
                             <a href="tel:0599343529"
-                                class="hover:text-primary-400 transition-colors flex items-center gap-2 dir-ltr justify-end"
-                                dir="ltr">
-                                <i data-lucide="phone" class="w-3 h-3"></i> 059 934 3529
+                                class="hover:text-primary-400 transition-colors flex items-center gap-2">
+                                <i data-lucide="phone" class="w-4 h-4 text-primary-600"></i>
+                                <span dir="ltr">059 934 3529</span>
                             </a>
                         </div>
                     </div>
