--- a/index-en.html
+++ b/index-en.html
@@ -131,7 +131,7 @@
                     </div>
 
                     <!-- Mobile Menu Button -->
-                    <button class="md:hidden p-2 text-secondary hover:text-primary-600">
+                    <button id="mobile-menu-btn" class="md:hidden p-2 text-secondary hover:text-primary-600">
                         <i data-lucide="menu" class="w-6 h-6"></i>
                     </button>
                 </div>
@@ -148,7 +148,7 @@
                 <a href="assessment-en.html" class="text-primary-600 font-bold">Readiness Evaluation</a>
                 <button onclick="openBookingModal()" class="flex items-center gap-2 text-primary-600 font-bold">
                     <i data-lucide="calendar-clock" class="w-4 h-4"></i>
-                    <span>Schedule Consultation</span>
+                    <span>Schedule Introductory Visit</span>
                 </button>
             </nav>
         </div>
@@ -555,6 +555,16 @@
             const sections = document.querySelectorAll('div[id]'); // Select sections with IDs
             const sidebarLinks = document.querySelectorAll('.sidebar-link');
             const navLinks = document.querySelectorAll('#main-nav a[href^="#"]'); // Top nav links only
+
+            // Mobile Menu Logic
+            const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+            const mobileMenu = document.getElementById('mobile-menu');
+
+            if (mobileMenuBtn && mobileMenu) {
+                mobileMenuBtn.addEventListener('click', () => {
+                    mobileMenu.classList.toggle('hidden');
+                });
+            }
 
             const observerOptions = {
                 root: null,
