--- a/index.html
+++ b/index.html
@@ -618,16 +618,16 @@
     </script>
     <!-- Floating Action Button for Booking (Left) -->
     <button onclick="openBookingModal()"
-        class="fixed top-32 left-6 z-50 bg-pink-700 text-white px-4 py-1.5 rounded-full shadow-lg hover:bg-pink-800 transition transform hover:scale-105 flex items-center gap-2 border border-white/20">
-        <i data-lucide="calendar-clock" class="w-3.5 h-3.5"></i>
-        <span class="font-bold text-xs whitespace-nowrap tracking-wide">حجز موعد</span>
+        class="fixed top-32 left-6 z-50 bg-pink-700 text-white px-3 py-1 rounded-full shadow-lg hover:bg-pink-800 transition transform hover:scale-105 flex items-center gap-1.5 border border-white/20">
+        <i data-lucide="calendar-clock" class="w-3 h-3"></i>
+        <span class="font-bold text-[11px] whitespace-nowrap tracking-wide">حجز موعد</span>
     </button>
 
     <!-- Floating Action Button for Evaluation (Right) - Mirrored -->
     <a href="assessment.html"
-        class="fixed top-32 right-6 z-50 bg-primary-600 text-white px-4 py-1.5 rounded-full shadow-lg hover:bg-primary-700 transition transform hover:scale-105 flex items-center gap-2 border border-white/20">
-        <i data-lucide="clipboard-check" class="w-3.5 h-3.5"></i>
-        <span class="font-bold text-xs whitespace-nowrap tracking-wide">تقييم الجاهزية</span>
+        class="fixed top-32 right-6 z-50 bg-primary-600 text-white px-3 py-1 rounded-full shadow-lg hover:bg-primary-700 transition transform hover:scale-105 flex items-center gap-1.5 border border-white/20">
+        <i data-lucide="clipboard-check" class="w-3 h-3"></i>
+        <span class="font-bold text-[11px] whitespace-nowrap tracking-wide">تقييم الجاهزية</span>
     </a>
 
     <!-- Booking Modal -->
